# BezOS

./: .clangd  .editorconfig  .gitignore  .gitmodules  Makefile  OVMF.fd  README.md  REWRITE.md  armv8-cross.txt  bezos.asm  bezos.code-workspace  bochsrc.bxrc  build.py  cross_file.txt  kernel.c  makefile  meson.build  meson.format  meson_options.txt  ovmf-code-x86_64.fd  ovmf-vars-x86_64.fd  qemu.bat  qemu.err  qemu.sh  repo.code-workspace  setup.bat  setup.sh  test.cpp  types.h  x64-clang-cross.ini  x64-clang.ini  x64-cross.ini  x64-gcc.ini  x86-64-cross.ini  x86-64-cross.txt  yes.asm  yes.txt
boot/bios/: boot.asm  boot.c  boot.cpp  boot.ld  kernel.ld  klink.ld  link.ld  meson.build
kernel/: .gitignore  io.h  kernel.c  kernel.cpp  kernel.h  makefile  meson.build  types.h  util.cpp  util.h
kernel/arch/: idt.h
kernel/arch/armv8/: link.ld  meson.build
kernel/arch/x86_64/: boot  boot.asm  link.ld  meson.build
kernel/asm/: cpuid.asm  entry.asm  link.ld  makefile  multiboot.asm
kernel/data/: image.sh  linker-hyper.ld  smp.ld
kernel/data/hyper/: hyper-install
kernel/fs/: filestream.h  filesystem.h  memorystream.h  stream.h
kernel/include/: acpi.hpp  apic.hpp  arch.h  arena.hpp  boot.hpp  can.hpp  cmos.hpp  crt.hpp  delay.hpp  display.hpp  elf.hpp  events.hpp  gdt.h  gdt.hpp  hpet.hpp  hypervisor.hpp  isr.hpp  kernel.h  kernel.hpp  log.hpp  math.hpp  memory.hpp  notify.hpp  panic.hpp  pat.hpp  pci.hpp  pit.hpp  process.hpp  processor.hpp  ramfs.hpp  schedule.hpp  smbios.hpp  smp.hpp  syscall.hpp  thread.hpp  uart.hpp  unit.hpp  vfs.hpp  vfs_types.hpp
kernel/include/acpi/: acpi.hpp  aml.hpp  fadt.hpp  header.hpp  hpet.hpp  madt.hpp  mcfg.hpp
kernel/include/allocator/: allocator.hpp  bitmap.hpp  bucket.hpp  bump.hpp  freelist.hpp  synchronized.hpp  tlsf.hpp  vmem.hpp
kernel/include/arch/: arch.hpp  cr0.hpp  cr4.hpp  intrin.hpp  msr.hpp  paging.hpp  ports.hpp
kernel/include/devices/: ddi.hpp  hid.hpp
kernel/include/drivers/: driver.hpp
kernel/include/fs/: device.hpp  mount.hpp  node.hpp  path.hpp  ramfs.hpp  tarfs.hpp  types.hpp  vfs.hpp
kernel/include/fs2/: device.hpp  node.hpp  path.hpp  ramfs.hpp  tarfs.hpp  vfs.hpp
kernel/include/hid/: hid.hpp  ps2.hpp
kernel/include/memory/: allocator.hpp  layout.hpp  memory.hpp  page_allocator.hpp  paging.hpp  physical.hpp  range.hpp  range_allocator.hpp  virtual.hpp  virtual_allocator.hpp
kernel/include/pci/: config.hpp  pci.hpp
kernel/include/process/: process.hpp  schedule.hpp
kernel/include/shared/: status.h  syscall.h
kernel/include/std/: algorithm.hpp  concurrency.hpp  condition_variable.hpp  fixed_deque.hpp  fixed_vector.hpp  forward_list.hpp  function.hpp  memory.hpp  rcu.hpp  rcuptr.hpp  recursive_mutex.hpp  ringbuffer.hpp  shared.hpp  shared_spinlock.hpp  span.hpp  spinlock.hpp  static_string.hpp  static_vector.hpp  std.hpp  string.hpp  string_view.hpp  traits.hpp  vector.hpp
kernel/include/util/: absl.hpp  bits.hpp  chrono.hpp  combine.hpp  cpuid.hpp  digit.hpp  endian.hpp  field.hpp  format.hpp  gnu_chrono.hpp  logger.hpp  math.hpp  memory.hpp  signature.hpp  util.hpp  uuid.hpp
kernel/log/: log.cpp  log.h  vga.cpp
kernel/memory/: e820.cpp  e820.h  makefile  memory.cpp  memory.h
kernel/metal/: README  makefile
kernel/metal/pci/: pci.h
kernel/metal/pcie/: pcie.h
kernel/metal/ram/: makefile  ram.cpp  ram.h
kernel/metal/usb/: usb.h
kernel/metal/vga/: makefile  meson.build  vga.cpp
kernel/mm/: mm.h  pmm.cpp  pmm.h  vmm.h
kernel/modules/memory/: memory.cpp  memory.h
kernel/modules/vga/: vga.cpp  vga.h
kernel/pci/: makefile  pci.cpp
kernel/src/: acpi.cpp  apic.cpp  boot.cpp  canvas.cpp  check.cpp  cmos.cpp  crt.c  crt.cpp  crt_freestanding.cpp  cxxrt.cpp  delay.cpp  display.cpp  font.hpp  gdt.cpp  hpet.cpp  hypervisor.cpp  isr.S  isr.cpp  launch.cpp  log.cpp  main.cpp  memory.cpp  notify.cpp  pat.cpp  pci.cpp  pit.cpp  processor.cpp  schedule.cpp  smbios.cpp  smp.S  smp.cpp  syscall.cpp  thread.cpp  uart.cpp  user.S  vfs.cpp
kernel/src/acpi/: acpi.cpp  aml.cpp  format.cpp
kernel/src/allocator/: bitmap.cpp  freelist.cpp
kernel/src/arch/: cr.cpp
kernel/src/boot/: hyper.cpp  limine.cpp
kernel/src/drivers/: driver.cpp  virtio_blk.cpp
kernel/src/fs/: path.cpp  ramfs.cpp  tarfs.cpp  vfs.cpp
kernel/src/fs2/: handle.cpp  node.cpp  path.cpp  ramfs.cpp  tarfs.cpp  vfs.cpp
kernel/src/hid/: hid.cpp  ps2.cpp
kernel/src/memory/: alloc.cpp  allocator.cpp  bitmap.cpp  layout.cpp  page_allocator.cpp  (+5 more)
kernel/subprojects/: gtest.wrap  libvirt.wrap  limine.wrap  stb.wrap
kernel/test/: bits.cpp  bitset.cpp  cmos.cpp  crt.cpp  display.cpp  fixed_deque.cpp  format.cpp  freelist.cpp  memmap.cpp  memory_range.cpp  page_allocator.cpp  page_attribute_table.cpp  paging.cpp  pmm.cpp  ports.cpp  serial.cpp  shared.cpp  string.cpp  terminal.cpp  test_shim.cpp  vector.cpp  vfs.cpp
kernel/util/: macros.h
kernel/utils/: io.h
kernel/vga/: vga.cpp  vga.h
shared/: meson.build
shared/src/: syscall.S  syscall.c  syscall_clock.c  syscall_device.c  syscall_fs.c  syscall_threads.c
sources/common/: .gitignore  meson.build
sources/kernel/: .gitignore  meson.build  meson_options.txt
sources/kernel-common/: meson.build
sources/kernel-test/: meson.build
sources/runtime/: meson.build
sources/sysapi/: meson.build  meson_options.txt  pkg.xml
sources/system/: meson.build
src/boot/: boot.asm  boot.c  boot.h  link.ld  long.asm  meson.build  prot.asm  prot.cpp  real.asm
subprojects/concurrentqueue/: LICENSE.build  meson.build
system/: bezos.ini  init.asm  meson.build
system/data/: bezos.ini
system/init/: init.S  init.cpp
system/shell/: shell.cpp
system/subprojects/: flanterm.wrap
tool/: .gitignore  meson.build
tool/ktest/: debug  main.cpp
tool/libpkgtool/: meson.build
tool/package/: defer.hpp  main.cpp  overlay.proto  overlay.x
tool/pkgtool/: meson.build
tool/subprojects/: glob.wrap  indicators.wrap  progressbar.wrap  sqlite3.wrap  xdrpp.wrap
tools/: meson.build
tools/package/: main.cpp
tools/subprojects/: argo.wrap  libarchive.wrap  sqlitecpp.wrap
(+1257 files in other folders)
